# webcamPutting

./: .gitignore  CLAUDE.md  Logs.txt  README.md  birdman_putting.spec  putt_log.txt  pyproject.toml  test_camera.py  webcam_putting.spec
assets/: BirdmanPutting_Logo_Green.ai  default_config.toml
docs/: SETUP.md
scripts/: benchmark_cuda.py
src/birdman_putting/: __main__.py  app.py  calibration.py  camera.py  color_presets.py  config.py  cuda_detection.py  detection.py  gpu.py  gspro_client.py  obs_controller.py  physics.py  tracking.py
src/birdman_putting/mevo/: __init__.py  calibrate.py  detector.py  ocr.py  screenshot.py
src/birdman_putting/ui/: main_window.py  overlay.py  theme.py  video_panel.py
src/webcam_putting/: __init__.py  __main__.py  app.py  calibration.py  camera.py  config.py  detection.py  gspro_client.py  physics.py  tracking.py
src/webcam_putting/ui/: main_window.py  overlay.py  settings_panel.py  video_panel.py
tests/: conftest.py  test_calibration.py  test_camera.py  test_config.py  test_cuda_detection.py  test_detection.py  test_gpu.py  test_gspro_client.py  test_mevo_detector.py  test_mevo_ocr.py  test_physics.py  test_tracking.py
